--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.6.3",
     "com.unity.mathematics": "1.2.6",
+    "com.unity.recorder": "4.0.2",
     "com.unity.toolchain.linux-x86_64": "2.0.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
